[gd_scene load_steps=2 format=3 uid="uid://bkpwy3i8i306d"]

[ext_resource type="Script" path="res://scripts/AUDIO.gd" id="1_w50xp"]

[node name="Options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="TabContainer" parent="."]
layout_mode = 2
offset_left = 420.0
offset_right = 1500.0
offset_bottom = 1080.0
current_tab = 0

[node name="AUDIO" type="Control" parent="Settings"]
layout_mode = 2
script = ExtResource("1_w50xp")
metadata/_tab_index = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/AUDIO"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -38.5
offset_right = 83.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="labels" type="VBoxContainer" parent="Settings/AUDIO/HBoxContainer3"]
layout_mode = 2

[node name="MASTER" type="Label" parent="Settings/AUDIO/HBoxContainer3/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "MASTER"

[node name="MUSIC" type="Label" parent="Settings/AUDIO/HBoxContainer3/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "MUSIC"

[node name="FX" type="Label" parent="Settings/AUDIO/HBoxContainer3/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "FX"

[node name="Sliders" type="VBoxContainer" parent="Settings/AUDIO/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MASTER" type="HSlider" parent="Settings/AUDIO/HBoxContainer3/Sliders"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="MUSIC" type="HSlider" parent="Settings/AUDIO/HBoxContainer3/Sliders"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="FX" type="HSlider" parent="Settings/AUDIO/HBoxContainer3/Sliders"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="labels2" type="VBoxContainer" parent="Settings/AUDIO/HBoxContainer3"]
layout_mode = 2

[node name="MASTER" type="CheckBox" parent="Settings/AUDIO/HBoxContainer3/labels2"]
layout_mode = 2
size_flags_vertical = 6

[node name="MUSIC" type="CheckBox" parent="Settings/AUDIO/HBoxContainer3/labels2"]
layout_mode = 2
size_flags_vertical = 6

[node name="FX" type="CheckBox" parent="Settings/AUDIO/HBoxContainer3/labels2"]
layout_mode = 2
size_flags_vertical = 6

[node name="VIDEO" type="Control" parent="Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Settings/VIDEO"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -25.0
offset_right = 81.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="labels" type="VBoxContainer" parent="Settings/VIDEO/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RESOLUTIONS" type="Label" parent="Settings/VIDEO/VBoxContainer/labels"]
layout_mode = 2
text = "RESOLUTIONS "

[node name="VSYNC" type="Label" parent="Settings/VIDEO/VBoxContainer/labels"]
layout_mode = 2
text = "V-SYNC
"

[node name="HBoxContainer" type="VBoxContainer" parent="Settings/VIDEO/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OptionButton" type="OptionButton" parent="Settings/VIDEO/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "3840 X 2160"
popup/item_1/text = "1920 X 1080"
popup/item_1/id = 1

[node name="CheckButton" type="CheckButton" parent="Settings/VIDEO/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CONTROLS" type="Control" parent="Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="value_changed" from="Settings/AUDIO/HBoxContainer3/Sliders/MASTER" to="Settings/AUDIO" method="_on_master_value_changed"]
[connection signal="value_changed" from="Settings/AUDIO/HBoxContainer3/Sliders/MUSIC" to="Settings/AUDIO" method="_on_music_value_changed"]
[connection signal="value_changed" from="Settings/AUDIO/HBoxContainer3/Sliders/FX" to="Settings/AUDIO" method="_on_fx_value_changed"]
[connection signal="toggled" from="Settings/AUDIO/HBoxContainer3/labels2/MASTER" to="Settings/AUDIO" method="_on_master_toggled"]
[connection signal="toggled" from="Settings/AUDIO/HBoxContainer3/labels2/MUSIC" to="Settings/AUDIO" method="_on_music_toggled"]
[connection signal="toggled" from="Settings/AUDIO/HBoxContainer3/labels2/FX" to="Settings/AUDIO" method="_on_fx_toggled"]
